; ModuleID = '/home/carl/AnghaBench/postgres/src/bin/pgbench/extr_pgbench.c_getExponentialRand.c'
source_filename = "/home/carl/AnghaBench/postgres/src/bin/pgbench/extr_pgbench.c_getExponentialRand.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_3__*, i32, i32, double)* @getExponentialRand to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @getExponentialRand(%struct.TYPE_3__* %0, i32 %1, i32 %2, double %3) #0 {
  %5 = alloca %struct.TYPE_3__*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca double, align 8
  %9 = alloca double, align 8
  %10 = alloca double, align 8
  %11 = alloca double, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store double %3, double* %8, align 8
  %12 = load double, double* %8, align 8
  %13 = fcmp ogt double %12, 0.000000e+00
  %14 = zext i1 %13 to i32
  %15 = call i32 @Assert(i32 %14)
  %16 = load double, double* %8, align 8
  %17 = fneg double %16
  %18 = call double @exp(double %17) #3
  store double %18, double* %9, align 8
  %19 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %20 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %19, i32 0, i32 0
  %21 = load i32, i32* %20, align 4
  %22 = call double @pg_erand48(i32 %21)
  %23 = fsub double 1.000000e+00, %22
  store double %23, double* %10, align 8
  %24 = load double, double* %9, align 8
  %25 = fsub double 1.000000e+00, %24
  %26 = fcmp une double %25, 0.000000e+00
  %27 = zext i1 %26 to i32
  %28 = call i32 @Assert(i32 %27)
  %29 = load double, double* %9, align 8
  %30 = load double, double* %9, align 8
  %31 = fsub double 1.000000e+00, %30
  %32 = load double, double* %10, align 8
  %33 = fmul double %31, %32
  %34 = fadd double %29, %33
  %35 = call double @log(double %34) #3
  %36 = fneg double %35
  %37 = load double, double* %8, align 8
  %38 = fdiv double %36, %37
  store double %38, double* %11, align 8
  %39 = load i32, i32* %6, align 4
  %40 = load i32, i32* %7, align 4
  %41 = load i32, i32* %6, align 4
  %42 = sub nsw i32 %40, %41
  %43 = add nsw i32 %42, 1
  %44 = sitofp i32 %43 to double
  %45 = load double, double* %11, align 8
  %46 = fmul double %44, %45
  %47 = fptosi double %46 to i32
  %48 = add nsw i32 %39, %47
  ret i32 %48
}

declare dso_local i32 @Assert(i32) #1

; Function Attrs: nounwind
declare dso_local double @exp(double) #2

declare dso_local double @pg_erand48(i32) #1

; Function Attrs: nounwind
declare dso_local double @log(double) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
